--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -27,3 +27,57 @@
       command:
         cmd: docker compose up -d
         chdir: /opt/myapp
+
+
+- name: Deploy Monitoring Stack (Prometheus + Grafana)
+  hosts: webservers
+  become: yes
+
+  tasks:
+    - name: Ensure /opt/monitoring exists
+      file:
+        path: /opt/monitoring
+        state: directory
+
+    - name: Copy Prometheus docker-compose file
+      copy:
+        dest: /opt/monitoring/docker-compose.yml
+        content: |
+          version: '3.8'
+          services:
+            prometheus:
+              image: prom/prometheus:latest
+              container_name: prometheus
+              ports:
+                - "9090:9090"
+              volumes:
+                - ./prometheus.yml:/etc/prometheus/prometheus.yml
+            grafana:
+              image: grafana/grafana:latest
+              container_name: grafana
+              ports:
+                - "3000:3000"
+              volumes:
+                - grafana-data:/var/lib/grafana
+          volumes:
+            grafana-data:
+
+    - name: Copy Prometheus configuration
+      copy:
+        dest: /opt/monitoring/prometheus.yml
+        content: |
+          global:
+            scrape_interval: 5s
+          scrape_configs:
+            - job_name: 'jenkins'
+              metrics_path: /prometheus
+              static_configs:
+                - targets: ['localhost:8080']   # Change if Jenkins runs on another host/port
+            - job_name: 'docker'
+              static_configs:
+                - targets: ['localhost:9323']   # Docker daemon metrics (optional)
+
+    - name: Start Monitoring Stack
+      command:
+        cmd: docker compose up -d
+        chdir: /opt/monitoring
