--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -49,9 +49,9 @@
               image: prom/prometheus:latest
               container_name: prometheus
               ports:
-                - "9090:9090"
+                - "9091:9090"
               volumes:
-                - ./prometheus.yml:/etc/prometheus/prometheus.yml
+                - /opt/monitoring/prometheus.yml:/etc/prometheus/prometheus.yml:ro
             grafana:
               image: grafana/grafana:latest
               container_name: grafana
